<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F4D8"
    tools:context=".pages.AboutUsPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/about_us"
        android:textColor="#4E2B00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/amaranth"
        android:textAlignment="center"
        android:text="@string/what_is_tenor_kids"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/contact_us"
        android:textColor="#591D01"
        android:clickable="true"
        android:onClick="contactAction"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.21"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="387dp"
        android:layout_height="402dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="94dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center_horizontal"
        android:text="@string/text_about"
        android:textAlignment="center"
        android:textColor="#4C4C3E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>