<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F8F4D8"
    android:layout_height="match_parent"
    tools:context=".pages.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="234dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/family" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/welcome"
        android:textColor="#AF803B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:fontFamily="@font/amaranth"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openSignIn"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/amaranth"
        android:textColorHint="#FFFFFF"
        android:onClick="openSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toEndOf="@+id/button_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/button_about_us"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:fontFamily="@font/amaranth"
        android:background="@color/colorAccent"
        android:text="@string/about_us"
        android:onClick="openAboutUs"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />
</androidx.constraintlayout.widget.ConstraintLayout>